--- a/order-ptimilk.css
+++ b/order-ptimilk.css
@@ -120,27 +120,27 @@
 
 
 
+
+
 .order-block {
-  padding: 4px 0 5px 0;
   margin: 0 0 7px 0;
+  padding: 6px 10px 6px 10px;
+  border: 1px solid #efe6ee;
+  border-radius: 7px;
   background: none;
   box-shadow: none;
-  border-radius: 0;
-  border-bottom: 1px dotted #ecd5e0;
-}
-.order-block:last-child {
-  border-bottom: none;
 }
 .order-row.order-top {
   font-size: 18px;
   padding-bottom: 0;
-  margin-bottom: 2px;
+  margin-bottom: 1px;
   gap: 7px;
 }
 .order-row.order-flavors {
   margin-top: 0;
   font-size: 16px;
 }
+
 
 /*
 .order-row.order-flavors .order-flavor-img {
