--- a/order-ptimilk.css
+++ b/order-ptimilk.css
@@ -144,12 +144,41 @@
 }
 
 
-/*
-.order-row.order-flavors .order-flavor-img {
+
+.order-block {
+  margin: 0 0 7px 0;
+  padding: 5px 9px 6px 9px;
+  border: 1px solid #efe6ee;
+  border-radius: 7px;
+  background: none;
+}
+.order-row {
+  font-size: 17px;
+  line-height: 1.1;
+}
+.order-flavor-row {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  margin-top: 0;
+  font-size: 16px;
+  line-height: 1.1;
+}
+.order-warn {
+  color: #e06c75;
   margin-left: 12px;
-  margin-right: 3px;
-  width: 22px;
-  height: 22px;
+  font-size: 15px;
+  font-weight: 500;
+}
+.order-row.order-sum {
+  margin-top: 4px;
+  font-size: 17px;
+  font-weight: 600;
+}
+.order-flavor-img {
+  width: 21px;
+  height: 21px;
+  border-radius: 4px;
+  margin-right: 4px;
   vertical-align: middle;
 }
-*/
